[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'magic-chain-runtime-wasm'
version = '1.0.0'
[dependencies.magic-chain-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['magic-chain-runtime/std']

[workspace]
members = []

[lib]
crate-type = ['cdylib']
[profile.release]
lto = true
panic = 'abort'
